<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="home_greeting">Hello, it is currently</string>
    <string name="hourly_forecast_title">Later in the day, it will be...</string>
    <string name="clothing_recommend_title">Some clothing recommendations</string>
    <string name="degree_symbol">°</string>
    <string name="label_wind">Wind: </string>
    <string name="label_humidity">Humidity: </string>

    <string name="tempUnitImperial">F</string>
    <string name="pressureUnitImperial">hPa</string>
    <string name="windSpeedUnitImperial">MPH</string>

    <string name="tempUnitMetric">C</string>
    <string name="pressureUnitMetric">hPa</string>
    <string name="windSpeedUnitMetric">m/sec</string>

    <string name="preference_unit">preference_unit</string>
    <string name="preference_use_gps">preference_use_gps</string>
    <string name="preference_location">preference_location</string>

    <string name="default_city_id">4930956</string>

    <string name="prompt_city_input">Type in a city name</string>

    <string name="title_activity_alarm_broadcast_receiver">AlarmBroadcastReceiver</string>
</resources>
