<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeContainer"
    tools:context="com.example.kelly.weatherapp.MainActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/GreetingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_greeting"
                android:textAlignment="center" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="top|center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/temperatureNowView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:text="--"
                            android:textAlignment="textEnd"
                            android:textSize="72sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/DegreeSymbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/degree_symbol"
                            android:textAlignment="viewStart"
                            android:textSize="48sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/temperatureNowView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <TextView
                            android:id="@+id/tempUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="C"
                            android:textSize="48sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/DegreeSymbol"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.563" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="right"
                        android:orientation="vertical">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="100dp"
                            android:minWidth="100dp">

                            <TextView
                                android:id="@+id/currentCondition"
                                android:layout_width="wrap_content"
                                android:layout_height="14dp"
                                android:layout_marginBottom="8dp"
                                android:gravity="bottom|center|end"
                                android:text="-"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />
                        </android.support.constraint.ConstraintLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/windLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="5sp"
                                android:layout_weight="0"
                                android:text="@string/label_wind"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/windView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="-"
                                android:textAlignment="textStart" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/humidityLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="5sp"
                                android:layout_weight="0"
                                android:text="@string/label_humidity"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/humidityView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="-"
                                android:textAlignment="textStart" />
                        </LinearLayout>

                    </LinearLayout>

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/LocationField"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="in"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/Location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Boston, MA"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="Later tonight the weather will be "
                    android:drawableLeft="@mipmap/Warning"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temperatureLaterView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="--"
                    android:textSize="68sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/DegreeSymbol2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/degree_symbol"
                    android:textAlignment="viewStart"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/temperatureNowView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tempUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="C"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/DegreeSymbol"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.563" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>
